# penny-pincher

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/penny_pincher/: __init__.py  app.py  cli.py  lms.py  logging.py  settings.py
tests/: conftest.py  test_app.py  test_settings.py
