[project]
name = "penny-pincher"
version = "0.1.0"
description = "Local Claude API proxy — routes local model requests to LM Studio, with Anthropic fallback."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Joshua Ginsberg", email = "jag@flowtheory.net" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "structlog>=25.0",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
cli = [
    "typer>=0.15",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
penny-pincher = "penny_pincher.cli:app"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/penny_pincher"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["penny_pincher"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src"]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
